src/custom.scss
@import "~bootstrap/scss/bootstrap";

// Small tablets and large smartphones (landscape view)
$screen-sm-min: 576px;

// Small tablets (portrait view)
$screen-md-min: 768px;

// Tablets and small desktops
$screen-lg-min: 992px;

// Large tablets and desktops
$screen-xl-min: 1200px;

@mixin sm {
    @media (min-width: #{$screen-sm-min}) {
      @content;
    }
  }
  
  // Medium devices
@mixin md {
    @media (min-width: #{$screen-md-min}) {
      @content;
    }
  }
  
  // Large devices
@mixin lg {
    @media (min-width: #{$screen-lg-min}) {
      @content;
    }
  }
  
  // Extra large devices
@mixin xl {
    @media (min-width: #{$screen-xl-min}) {
      @content;
    }
  }

// Fonts

@font-face {
  font-family: 'inter';
  src: url('./fonts/static/Inter-Black.ttf');
  font-weight: 900;
  font-style: bold;
}

@font-face {
  font-family: 'inter';
  src: url('./fonts/static/Inter-Light.ttf');
  font-weight: 200;
  font-style: normal
}

@font-face {
  font-family: 'inter';
  src: url('./fonts/static/Inter-Regular.ttf');
  font-weight: 400;
  font-style: normal
}
  

//   Colors
$white: #fff;
$black: #000;
$very-dark-blue: #0B1C2C;
$very-light-green: #00FF4E5D;
$light-purple: #2700FF6A;
$sky-blue: #76FFF415;
$medium-blue: #1B3E60;
$forest-green: #076F38;
$dark-blue: #112F4D;
$gray: #00000029;
$off-white: #FFFFFF19;
$grid-lines: #76FFF408;

* {
  margin: 0;
  padding: 0;
}

html {
  height: 100%;
}

h1, h2, h3, h4, p {
  color: $white;
  font-family: "inter", sans-serif;
  text-transform: none;
  margin: 0;
}

.container-fluid {
  padding: 0;
  margin: 0;
}

body {
    height: 100%;
    font-family: "Helvetica", sans-serif;
    background: $very-dark-blue;
    overflow-x: hidden;
}

.btn:focus,.btn:active {
  outline: none !important;
  box-shadow: none !important;
}

// Mobile Nav

.mobile-title-right {
  cursor: pointer;
}

.mobile-nav-container {
  position:absolute;
  background-color: $dark-blue;
  
  top: 0;
  bottom: 0;
  left: 0;
  // width: 90%;
  z-index: 999;

  @include md {
    bottom: -5%;
    width: 95%;
  }

  .nav-content-wrapper {
    margin-top: 2rem;
    // padding: 1rem;
    height: 95%;

    // Mobile Nav Header
    .header-nav-overlay {

      .mobile-close-container {
        width: 30%;

        
      }

      .mobile-nav-title-container {
        padding: 0;
        width: 70%;
        // display: none;

        .mobile-nav-title {
          font-size: .85rem;
          font-weight: 700;
          cursor: pointer;

          @include md {
            text-align: right;
            font-size: 1.5rem;
          }
        }
    
      }

    }

    // Mobile Nav Links

    .mobile-nav-link-container {

      // @include md {
      //   margin-top: auto;
      // }
      .mobile-nav-link-wrapper {

        margin-top: 4rem;

        @include md {
          justify-content: space-between;
          
        }

      

        .projects-expanded-container {

          opacity: 1;

          .projects-nav-link {
            padding: 0;
            padding-left: .5rem;
            margin: 1rem 0;
            font-family: 'inter', "Helvetica", sans-serif;
            font-weight: 700;
            font-size: 1rem;
            color: $white;
            text-decoration: none;
           
          }

        }

        .mobile-nav-link {
          padding: 0;
          margin: 1rem 0;
          font-family: 'inter', "Helvetica", sans-serif;
          font-weight: 700;
          font-size: 1.8rem;
          color: $white;
          text-decoration: none;

          @include md {
            margin: 2rem 0;
          }
        }
      }
    }

    .mobile-nav-footer {
      margin-top: auto;
      padding: 0;
     

      .mobile-footer-container {

        width: 80%;
        margin-left: 0;
        margin-bottom: 2rem;
        .copyright-container-mobile {
          font-size: .6rem;
          padding-top: 1rem;

          @include md {
            padding-top: 2rem;
          }
         
        }
      }
    }



   
  }


  

 
}


// Main Body Container

.main-body-container {
  padding-left: 2.3rem;
  padding-right: 2.3rem;
  position: relative;
}

.grid-container {
  position: absolute;
  padding-left: 2.3rem;
  padding-right: 2.3rem;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: -99;

  .row {
    height: 100%;
    .col {
      height: 100%;
      // border: 1px solid $gray;
    }
  }
}

 .col::after {
  content: '';
  position: absolute;
  top: 0;
  width: 1px;
  height: 100%;
  background-color: $grid-lines;

  @include lg {
    width: 3px;
  }
}

.col:last-of-type::before {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  width: 3px;
  height: 100%;
  background-color: $grid-lines;

  @include lg {
    width: 3px;
  }
}

.grid-container::after {
  content: '';
  position: absolute;
  top: 0;
  right:7px;
  width: 3px;
  height: 100%;
  background-color: $grid-lines;

  @include lg {
    width: 3px;
  }

}

.grid-container::before {
  content: '';
  position: absolute;
  top: 0;
  left: 20px;
  width: 3px;
  height: 100%;
  background-color: $grid-lines;

  @include lg {
    width: 3px;
  }

}







// .project-arrow {
//   cursor: pointer;
//   padding-left: 2rem;
// }

.view-project {
  font-family: pt-mono,monospace;
  font-weight: 700;
  font-style: normal;
  margin-bottom: 0;
  position: relative;
  cursor: pointer;

  @include lg {
    letter-spacing: .3rem;
  }
  
  
  .line-through-work, .view-all-line, .projects-line {
    height: 8px;
    // width: 80%;
    left: 0;
    right: 0;
    background-color: rgba(7,111,56, 0.8);
    position: absolute;
    bottom: 25%;
    z-index: -999;
  }
  
}

hr {
  border-top: 2px solid $white;
}
/* ... */

